changed json library and system for speed